objects/Merchandise__c.object
<CustomObject>
    <fields>
        <fullName>Catagories__c</fullName>
        <label>Catagories</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>islaptop__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Charger</fullName>
                </value>
                <value>
                    <fullName>Battery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Merchandise</relationshipLabel>
        <relationshipName>Merchandise</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type 1</fullName>
                </value>
                <value>
                    <fullName>Type 2</fullName>
                </value>
                <value>
                    <fullName>Type 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value1__c</fullName>
        <label>Value1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>islaptop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>islaptop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testloc__c</fullName>
        <label>testloc</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>islaptop__c</columns>
        <columns>Catagories__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Testing_Sharing__c</fullName>
        <label>Testing Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>Price_upper_limit</fullName>
        <active>true</active>
        <description>price cant be more than 1000</description>
        <errorConditionFormula>Price__c &gt; 1000</errorConditionFormula>
        <errorMessage>price cant be more than 1000</errorMessage>
    </validationRules>
</CustomObject>